tests/ui/generic-const-items/assoc-const-missing-type.stderr
error[E0658]: omitting type on const item declaration is experimental
  --> $DIR/assoc-const-missing-type.rs:12:15
   |
LL |     const K<T> = ();
   |               ^
   |
   = note: see issue #149226 <https://github.com/rust-lang/rust/issues/149226> for more information
   = help: add `#![feature(const_items_unit_type_default)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = help: consider specifying the type explicitly

error[E0658]: omitting type on const item declaration is experimental
  --> $DIR/assoc-const-missing-type.rs:15:12
   |
LL |     const Q = "";
   |            ^
   |
   = note: see issue #149226 <https://github.com/rust-lang/rust/issues/149226> for more information
   = help: add `#![feature(const_items_unit_type_default)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = help: consider specifying the type explicitly

error[E0326]: implemented const `K` has an incompatible type for trait
  --> $DIR/assoc-const-missing-type.rs:12:15
   |
LL |     const K<T> = ();
   |             - ^ expected type parameter `T`, found `()`
   |             |
   |             expected this type parameter
   |
note: type in trait
  --> $DIR/assoc-const-missing-type.rs:7:17
   |
LL |     const K<T>: T;
   |                 ^
   = note: expected type parameter `T`
                   found unit type `()`

error[E0195]: lifetime parameters or bounds on associated constant `Q` do not match the trait declaration
  --> $DIR/assoc-const-missing-type.rs:15:12
   |
LL |     const Q<'a>: &'a str;
   |            ---- lifetimes in impl do not match this associated constant in trait
...
LL |     const Q = "";
   |            ^ lifetimes do not match associated constant in trait

error[E0308]: mismatched types
  --> $DIR/assoc-const-missing-type.rs:15:15
   |
LL |     const Q = "";
   |               ^^ expected `()`, found `&str`

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0195, E0308, E0326, E0658.
For more information about an error, try `rustc --explain E0195`.
